# python-exchange-clients

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LMEX_SETUP_SUMMARY.md  MANIFEST.in  MIGRATION_PLAN.md  ORDER_FILTER_CHANGES_SUMMARY.md  ORDER_FILTER_TEST_CHECKLIST.md  README.md  UNIFIED_EXCHANGE_README.md  VALIDATION_GUIDE.md  WEBSOCKET_ARCHITECTURE_REPORT.md  WEBSOCKET_GUIDE.md  analyze_btc_gridbot.py  analyze_grid_gap.py  bitunix_integration_ultrathink.md  btc_long_gridbot_config.json  btc_safe_gridbot_config.json  btc_short_gridbot_config.json  build.sh  calculate_cvx_grid.py  calculate_cvx_short_grid.py  check_btc_position.py  check_cvx_orders.py  check_gridbot_status.py  check_lmex_raw_orders.py  check_position_mode.py  clear_and_restart.sh  cvx_short_gridbot_config.json  debug_grid_gaps.py  debug_raw_orders.py  docker-compose.yml  exchange_trading_platform_ultrathink.md  frontend_integration_summary.md  gridbot_ultrathink_plan.md  lmex_gridbot.py  nginx.conf  panel_rearrangement_test_checklist.md  panel_rearrangement_ultrathink.md  (+37 more)
backend/: Dockerfile  main.py  requirements.txt  run_with_env.py  start_backend_with_env.sh  test_backend.py  test_bitunix_api.py  test_bitunix_integration.py  test_env_config.py
examples/: basic_usage.py  bitunix_gridbot_example.py  fill_grid_gap.py  grid_bot_example.py  gridbot_config.json  gridbot_websocket_example.py  lmex_gridbot.py  lmex_gridbot_interactive.py  refresh_grid_orders.py  run_btc_long_gridbot.py  run_full_validation.py  run_full_validation_enhanced.py  run_gridbot.py  stop_cvx_gridbot.py  validate_bitunix.py
exchanges/: __init__.py  base.py  bitunix.py  lmex.py  validator.py  websocket_manager.py
frontend/: .eslintignore  .eslintrc.json  .prettierignore  Dockerfile  PANEL_RESIZE_PLAN.md  next.config.js  package-lock.json  package.json  tailwind.config.js  test_api_connection.js  test_grid_layout.html  test_resize_functionality.md  tsconfig.tsbuildinfo  validate.sh
gridbot/: README.md  __init__.py  calculator.py  cli.py  config.py  core.py  initial_position_calculator.py  types.py  (+7 more)
(+136 files in other folders)
